Another small changelog fix.

--- a/changelog
+++ b/changelog
@@ -178,7 +178,7 @@ pandoc (2.7)
 
   * HTML5 template: Add ARIA role `doc-toc` for table of contents (#4213).
 
-  * Make --metadata-file use pandoc-markdown (#5279, #5272, Mauro Bieg).
+  * Make `--metadata-file` use selected extensions (#5279, #5272, Mauro Bieg).
 
   * Text.Pandoc.Shared:
 
