LaTeX writer/template: better handling of front/main/backmatter.
In pandoc 2.7 we assumed that every class with chapters would
accept `\frontmatter`, `\mainmatter`, and `\backmatter`.
This is not so (e.g. report does not).  So pandoc 2.7
breaks on report class by including an unsupported command.

So we replace the book-class variable in the template with
two variables, has-chapters and has-frontmatter, and set
these intelligently in the writer.

Closes #5348.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -383,10 +383,10 @@ $endif$
 $endif$
 
 \begin{document}
-$if(title)$
-$if(book-class)$
+$if(has-frontmatter)$
 \frontmatter
 $endif$
+$if(title)$
 $if(beamer)$
 \frame{\titlepage}
 $else$
@@ -430,18 +430,18 @@ $endif$
 $if(lof)$
 \listoffigures
 $endif$
-$if(book-class)$
+$if(has-frontmatter)$
 \mainmatter
 $endif$
 $body$
 
-$if(book-class)$
+$if(has-frontmatter)$
 \backmatter
 $endif$
 $if(natbib)$
 $if(bibliography)$
 $if(biblio-title)$
-$if(book-class)$
+$if(has-chapters)$
 \renewcommand\bibname{$biblio-title$}
 $else$
 \renewcommand\refname{$biblio-title$}
