Ipynb reader/writer: better handling of cell metadata.
We now handle even complex cell metadata in the Div's attributes.
Simple metadata fields are rendered as a plain string, and complex ones
as JSON.

--- a/test/ipynb/simple.ipynb
+++ b/test/ipynb/simple.ipynb
@@ -45,7 +45,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "foo",
+     "bar"
+    ]
+   },
    "source": [
     "Image\n",
     "-----\n",
