Include execution output in ipynb test.

--- a/test/ipynb/simple.ipynb
+++ b/test/ipynb/simple.ipynb
@@ -30,9 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "execution_count": 2,
+     "metadata": {},
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "console.log(\"hello\");\n",
+       "</script>\n",
+       "<b>HTML</b>\n",
+       "hello"
+      ]
+     }
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "HTML(\"\"\"\n",
