--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -353,7 +353,7 @@ $endfor$
 $endif$
 
 $if(title)$
-\title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
+\title{$title$}
 $endif$
 $if(subtitle)$
 $if(beamer)$
@@ -368,7 +368,7 @@ $endif$
 \subtitle{$subtitle$}
 $endif$
 $if(author)$
-\author{$for(author)$$author$$sep$ \and $endfor$}
+\author{$for(author)$$author$$sep$ \and $endfor$$if(thanks)$\thanks{$thanks$}$endif$}
 $endif$
 \date{$date$}
 $if(beamer)$
