Offer additional title page options from KOMA classes
http://texdoc.net/texmf-dist/doc/latex/koma-script/scrguien.pdf
p.66ff

This is super important for all types of documents that need more information in the title, eg. Dissertations, Bachelor Thesis, Books, etc.

e.g.

\documentclass{scrbook}
\usepackage[english]{babel}
\begin{document}
\titlehead{{\LargeUnseen University\hfillSS~2002\\}
Higher Analytical Institute\\
Mythological Rd\\
34567 Etherworld}
\subject{Dissertation}
\title{Digital space simulation with the DSP\,56004}
\subtitle{Short but sweet?}
\author{Fuzzy George}
\date{30. February 2002}
\publishers{Adviser Prof. John Eccentric Doe}
\maketitle
\end{document}

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -391,6 +391,26 @@ $if(title)$
 $if(beamer)$
 \frame{\titlepage}
 $else$
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class do nothing
+}{% if KOMA class offer more titlepage options
+$if(titlehead)$
+  \titlehead{$titlehead$}
+$endif$
+$if(subject)$
+  \subject{$subject$}
+$endif$
+$if(publishers)$
+  \publishers{$publishers$}
+$endif$
+$if(extratitle)$
+  \extratitle{$extratitle$}
+$endif$
+$if(dedication)$
+  \dedication{$dedication$}
+$endif$
+}
+\makeatother
 \maketitle
 $endif$
 $if(abstract)$
