latex.default: add fontfamilydefault option.
This allows the font to be changed for the whole document.

[https://www.latex-project.org/help/documentation/fntguide.pdf](https://www.latex-project.org/help/documentation/fntguide.pdf)

See: p8.

[https://tex.stackexchange.com/questions/58833/effect-of-changing-fontfamily-and-familydefault](https://tex.stackexchange.com/questions/58833/effect-of-changing-fontfamily-and-familydefault)

[https://texwelt.de/wissen/fragen/785/wie-stelle-ich-alle-schrift-in-meinem-dokument-auf-serifenlos](https://texwelt.de/wissen/fragen/785/wie-stelle-ich-alle-schrift-in-meinem-dokument-auf-serifenlos)

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -88,6 +88,9 @@ $if(beamerarticle)$
 $endif$
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
+$if(fontfamilydefault)$
+\renewcommand*{\familydefault}{$fontfamilydefault$}
+$endif$
 $else$
 \usepackage{lmodern}
 $endif$
