LaTeX template: Move \setstretch after front matter
Ensures that `\maketitle`, `\tableofcontents`, and so forth are not affected by changes to line spacing. Closes #5179 by partially working around <https://github.com/reutenauer/polyglossia/issues/218>.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -93,7 +93,6 @@ $else$
 $endif$
 $if(linestretch)$
 \usepackage{setspace}
-\setstretch{$linestretch$}
 $endif$
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -430,6 +429,9 @@ $if(lot)$
 $endif$
 $if(lof)$
 \listoffigures
+$endif$
+$if(linestretch)$
+\setstretch{$linestretch$}
 $endif$
 $if(has-frontmatter)$
 \mainmatter
