--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -220,7 +220,7 @@ $if(colorlinks)$
 $else$
   hidelinks,
 $endif$
-}
+  pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
 $if(verbatim-in-note)$
 \VerbatimFootnotes % allows verbatim text in footnotes
