Update command test #5416 to make it windows friendly

--- a/test/command/5416.md
+++ b/test/command/5416.md
@@ -1,11 +1,13 @@
 ```
-% echo "{" | pandoc -f dokuwiki -t native
+% pandoc -f dokuwiki -t native
+{
 ^D
 [Para [Str "{"]]
 ```
 
 ```
-% echo "{{" | pandoc -f dokuwiki -t native
+% pandoc -f dokuwiki -t native
+{{
 ^D
 [Para [Str "{{"]]
 ```
